--- a/README.Rmd
+++ b/README.Rmd
@@ -17,3 +17,26 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 # liburrr: Indonesia holiday R package
 
 *Libur telah tiba, libur telah tiba* :musical_note::musical_note::musical_note:
+
+`liburrr` is an R package which contains functionality related to holiday date in Indonesia. The name of `liburrr` with three 'r' is inspired with R package `purrr`.
+
+## Installation
+
+```{r, eval = FALSE}
+# install.packages("devtools")
+devtools::install_github("rasyidstat/liburrr")
+```
+
+## Example
+
+```{r}
+library(liburrr)
+library(dplyr)
+df <- data.frame(dt = as.Date(c("2016-01-01","2016-01-02","2016-01-03")))
+df <- df %>%
+  mutate(weekend_flag = is_weekend(dt),
+         holiday_flag = is_holiday(dt),
+         holiday_flag_all = ifelse(weekend_flag == FALSE, holiday_flag, weekend_flag))
+df
+```
+
